@@ -1,0 +1,119 @@
+begin_unit
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_package
+DECL|package|org.apache.solr.highlight
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|highlight
+package|;
+end_package
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|vectorhighlight
+operator|.
+name|FragListBuilder
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|SolrParams
+import|;
+end_import
+begin_class
+DECL|class|WeightedFragListBuilder
+specifier|public
+class|class
+name|WeightedFragListBuilder
+extends|extends
+name|HighlightingPluginBase
+implements|implements
+name|SolrFragListBuilder
+block|{
+annotation|@
+name|Override
+DECL|method|getFragListBuilder
+specifier|public
+name|FragListBuilder
+name|getFragListBuilder
+parameter_list|(
+name|SolrParams
+name|params
+parameter_list|)
+block|{
+comment|// NOTE: This class (currently) makes no use of params
+comment|// If that ever changes, it should wrap them with defaults...
+comment|// params = SolrParams.wrapDefaults(params, defaults)
+name|numRequests
+operator|++
+expr_stmt|;
+return|return
+operator|new
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|vectorhighlight
+operator|.
+name|WeightedFragListBuilder
+argument_list|()
+return|;
+block|}
+comment|///////////////////////////////////////////////////////////////////////
+comment|//////////////////////// SolrInfoMBeans methods ///////////////////////
+comment|///////////////////////////////////////////////////////////////////////
+annotation|@
+name|Override
+DECL|method|getDescription
+specifier|public
+name|String
+name|getDescription
+parameter_list|()
+block|{
+return|return
+literal|"WeightedFragListBuilder"
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getSource
+specifier|public
+name|String
+name|getSource
+parameter_list|()
+block|{
+return|return
+literal|"$URL: http://svn.apache.org/repos/asf/lucene/dev/branches/branch_4x/solr/core/src/java/org/apache/solr/highlight/WeightedFragListBuilder.java $"
+return|;
+block|}
+block|}
+end_class
+end_unit
